game/src/DollStyle.css
.Game {
    font-size: 20;
    display: flex;
    background-color: rgba(160, 184, 232, 0.941);
    justify-content: center;
    align-items: center;
    height: 100vh;
}

.Doll-Container {
    width: 281.575px;
    height: 712.5px;
    border: 2px solid black;
    position: relative;
    overflow: hidden;
    background-color: white;
}

.Background-Container {
    width: 708px;
    height: 1782px;
    object-fit: none;
    object-position: 35% 100%;
    transform: scale(40%);
    transform-origin: top left;
    position: absolute;
}

.Doll {
    position: absolute;
    height: 100%;
}

.Item-Option {
    position: relative;
    width: 830px;
    height: 712.5px;
    border: 2px solid black;
    border-left: none;
    background-color: white;
}

.Face-Selection-Container{
    margin-left: 25px;
    margin-top: 15px;
}

.Image {
    width: 57.69px;
    height: 57.69px;
}

.Eyes-Option {
    display: flex;
    width: 600px;
}

.Eyes {
    height: 125px;
    width: 125px;
    object-fit: none;
    object-position: 58% 13%;
    transform: scale(40%);
    border: 2px solid black;
}

.Nose-Option {
    display: flex;
    width: 600px;
}

.Noses {
    height: 125px;
    width: 125px;
    object-fit: none;
    object-position: 49% 14%;
    transform: scale(40%);
    border: 2px solid black;
}

.Lip-Option {
    display: flex;
    width: 600px;
}

.Lips {
    height: 125px;
    width: 125px;
    object-fit: none;
    object-position: 49% 16.5%;
    transform: scale(40%);
    border: 2px solid black;
}

.Brow-Option {
    display: flex;
    width: 600px;
}

.Brows {
    height: 125px;
    width: 125px;
    object-fit: none;
    object-position: 57% 10.5%;
    transform: scale(40%);
    border: 2px solid black;
}

.FaceDetail-Image {
    width: 57.69px;
    height: 57.69px;
}

/* to have details line up with the rest of the sets, hardcode margin.
will find a better solution.
maybe i can make this set overall larger view */
.FaceDetail-Option {
    margin-left: -62px ;
    display: flex;
    width: 600px;
}

.FaceDetails {
    height: 250px;
    width: 250px;
    object-fit: none;
    object-position: 49.5% 12%;
    transform: scale(20.26%);
    border: 2px solid black;
}

.Tone-Image {
    width: 38.25px;
    height: 38.25px;
}

.Tone-Option {
    margin-left: -9px;
    margin-top: 100px;
    display: flex;
    width: 600px;
}

.Tones {
    transform: scale(-25%);
    border: 2px solid black;
}

.Short-Dress-Option {
    margin-top: 60px;
    margin-left: 35px;
    display: flex;
    flex-wrap: wrap;
}

.Short-Dress {
    height: 1000px;
    width: 410px;
    object-fit: none;
    object-position: 49% 36%;
    transform: scale(25%);
    transform-origin: top left;
    border: 2px solid rgb(65, 75, 140);
}

.Short-Dress-Image {
    height: 270px;
    width: 130px;
}

.Medium-Dress-Option {
    margin-top: 15px;
    margin-left: 157px;
    display: flex;
    flex-wrap: wrap;
}

.Medium-Dress {
    height: 1200px;
    width: 460px;
    object-fit: none;
    object-position: 49% 48%;
    transform: scale(25%);
    transform-origin: top left;
    border: 2px solid rgb(65, 75, 140);
}

.Eighties-Ruffle {
    height: 980px;
    width: 750px;
    object-fit: none;
    object-position: 49% 45%;
    transform: scale(25%);
    transform-origin: top left;
    margin-left: -35px;
    border: 2px solid rgb(65, 75, 140);
}

.Eighties-Green {
    height: 1350px;
    width: 550px;
    object-fit: none;
    object-position: 49% 51%;
    transform: scale(25%);
    transform-origin: top left;
    margin-left: 110px;
    border: 2px solid rgb(65, 75, 140);
}

.Medium-Dress-Image {
    height: 325px;
    width: 200px;
}

.Long-Dress-Option {
    margin-top: 135px;
    margin-left: 15px;
    display: flex;
    flex-wrap: wrap;
}

.Long-Narrow-Dress {
    height: 1600px;
    width: 570px;
    object-fit: none;
    object-position: 49% 63%;
    transform: scale(23%);
    transform-origin: top left;
    border: 2px solid rgb(65, 75, 140);
}

.Long-Narrow-Dress-Image {
    height: 500px;
    width: 133px;
}

.Hair-Container {
    position: relative;
    left: 80px;
    top: 60px;
    width: 662px;
    height: 529px;
    border: 2px solid black;
}

.Hair-Option {
    display: flex;
    flex-wrap: wrap;
    width: 700px;
}

.Hair-Image {
    height: 132.43px;
    width: 132.43px;
}

.Hair {
    height: 775px;
    width: 775px;
    object-fit: none;
    object-position: 45% 1%;
    transform: scale(17%);
    transform-origin: top left;
    border: 2px solid rgb(65, 75, 140);
}

.Shoe-Option {
    display: flex;
    flex-wrap: wrap;
}

.Short-Shoe-Option {
    display: flex;
    flex-wrap: wrap;
    margin-top: 30px;
    width: 600px;
}

.Tall-Boot {
    margin-top: 30px;
    margin-left: 23px;
    height: 750px;
    width: 410px;
    object-fit: none;
    object-position: 49% 95%;
    transform: scale(25%);
    transform-origin: top left;
}

.Tall-Boot-Image {
    height: 200px;
    width: 130px;
}

.Tall-Chunky-Boot {
    margin-top: 30px;
    margin-left: 23px;
    height: 750px;
    width: 410px;
    object-fit: none;
    object-position: 49% 98%;
    transform: scale(25%);
    transform-origin: top left;
}

.Tall-Chunky-Boot-Image {
    height: 200px;
    width: 130px;
}

.Medium-Chunky-Boot {
    margin-top: 50px;
    margin-left: 20px;
    height: 590px;
    width: 445px;
    object-fit: none;
    object-position: 49% 98%;
    transform: scale(25%);
    transform-origin: top left;
}

.Medium-Chunky-Boot-Image {
    height: 200px;
    width: 130px;
}

.Short-Shoe {
    margin-top: 80px;
    margin-left: 150px;
    height: 400px;
    width: 410px;
    object-fit: none;
    object-position: 49% 97%;
    transform: scale(25%);
    transform-origin: top left;

}

.Short-Shoe-Image {
    height: 150px;
    width: 130px;
}

.Glasses-Option {
    display: flex;
    flex-wrap: wrap;
    margin-left: 275px;
    margin-top: 90px;
    width: 400px;
}

.Glasses {
    height: 120px;
    width: 250px;
    object-fit: none;
    object-position: 49.25% 13%;
    transform: scale(50%);
    transform-origin: top left;
    border: 2px solid black;
}

.Glasses-Image {
    width: 150px;
    height: 100px;
}

.Necklace-Image {
    width: 110px;
    height: 110px;
}

.Necklace-Option {
    display: flex;
    flex-wrap: wrap;
    margin-left: 140px;
    margin-top: 140px;
    width: 600px;
}

.Short-Necklace {
    height: 170px;
    width: 170px;
    object-fit: none;
    object-position: 49% 24%;
    transform: scale(60%);
    transform-origin: top left;
    border: 2px solid black;
}

.ChokerwPendent-Necklace {
    height: 170px;
    width: 170px;
    object-fit: none;
    object-position: 49% 22%;
    transform: scale(60%);
    transform-origin: top left;
    border: 2px solid black;
}

.Choker-Necklace {
    height: 170px;
    width: 170px;
    object-fit: none;
    object-position: 49% 21%;
    transform: scale(60%);
    transform-origin: top left;
    border: 2px solid black;
}

.Thin-Necklace {
    height: 170px;
    width: 170px;
    object-fit: none;
    object-position: 49% 22%;
    transform: scale(60%);
    transform-origin: top left;
    border: 2px solid black;
}

.Long-Necklace {
    height: 170px;
    width: 170px;
    object-fit: none;
    object-position: 49% 30.5%;
    transform: scale(60%);
    transform-origin: top left;
    border: 2px solid black;
}

.Medium-Necklace {
    height: 170px;
    width: 170px;
    object-fit: none;
    object-position: 49% 26%;
    transform: scale(60%);
    transform-origin: top left;
    border: 2px solid black;
}

.Gloves-Option {
    display: flex;
    flex-wrap: wrap;
    margin-left: 130px;
    margin-top: 125px;
    width: 600px;
}

.Gloves {
    height: 450px;
    width: 860px;
    object-fit: none;
    object-position: 49% 44%;
    transform: scale(20%);
    transform-origin: top left;
    border: 2px solid black;
}

.Long-Gloves {
    height: 750px;
    width: 860px;
    object-fit: none;
    object-position: 49% 35%;
    transform: scale(20%);
    transform-origin: top left;
    border: 2px solid black;
}

.Gloves-Image {
    width: 200px;
    height: 100px;
}

.Background-Option {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    margin-left: 115px;
    margin-top: 90px;
    width: 600px;
}

.Background-Image {
    height: 92px;
    width: 92px;
}

.Background {
    height: 90px;
    width: 90px;
}

